--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <title>Vite App</title>
 </head>
 <body>
-<div id="app"></div>
+<div id="app">
+    <div>
+        <label>
+        <span>자동차 대수는 몇대인가요?</span>
+            <input id="carCount" type="number">
+        </label>
+    </div>
+    <div>
+        <label>
+            <span>시도할 횟수는 몇회 인가요?</span>
+            <input id="roundCount" type="number">
+        </label>
+    </div>
+    <div>
+        <button id="startBtn">시작</button>
+    </div>
+    <div id="roundResult"></div>
+</div>
 <script type="module" src="/src/index.ts"></script>
 </body>
 </html>
