--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-</head>
-<body>
-<div id="app"></div>
-<script type="module" src="/src/index.ts"></script>
-</body>
+  </head>
+  <body>
+    <div id="app">
+      <div>
+        <label for="carInput">자동차 대수는 몇 대인가요?</label>
+        <input id="carInput" type="number" />
+        <button id="addButton">추가</button>
+      </div>
+      <div>
+        <label for="tryInput">시도할 횟수는 몇 회인가요?</label>
+        <input id="tryInput" type="number" />
+        <button id="startButton">시작</button>
+      </div>
+      <div id="result"></div>
+    </div>
+    <script type="module" src="/src/index.ts"></script>
+  </body>
 </html>
