--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-</head>
-<body>
-<div id="app">
-    <div>
+  </head>
+  <body>
+    <div id="app">
+      <div>
         <label>
-        <span>자동차 대수는 몇대인가요?</span>
-            <input id="carCount" type="number">
+          <span>추가할 자동차 이름은 무엇입니까</span>
+          <input id="carName" type="text" />
+          <button id="carNameAdd">추가</button>
         </label>
-    </div>
-    <div>
+      </div>
+      <div>
         <label>
-            <span>시도할 횟수는 몇회 인가요?</span>
-            <input id="roundCount" type="number">
+          <span>시도할 횟수는 몇회 인가요?</span>
+          <input id="roundCount" type="number" />
         </label>
-    </div>
-    <div>
+      </div>
+      <div>
         <button id="startBtn">시작</button>
+      </div>
+      <ul id="roundResult"></div>
     </div>
-    <div id="roundResult"></div>
-</div>
-<script type="module" src="/src/index.ts"></script>
-</body>
+    <script type="module" src="/src/index.ts"></script>
+  </body>
 </html>
