[feat] 자동차 이름 추가 기능

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       <section>
         <form id="car-race-form">
           <label>
-            <span>자도차 대수는 몇 대인가요?</span>
-            <input id="car-count-input" type="number" />
+            <span>경주할 자동차 이름을 입력하세요.</span>
+            <input id="car-name-input" type="text" />
           </label>
+          <button id="add-car-button" type="button">추가</button>
           <label>
             <span>시도할 횟수는 몇 회인가요?</span>
             <input id="try-count-input" type="number" />
